@@ -7,6 +7,7 @@ trunk
 * eliminated getOption('mxOptimizerOptions') and getOption('mxCheckpointOptions') 
 * added getOption('mxOptions')
 * error messages for illegal names provide function call information
+* added 'estimates' column to confidence intervals in summary() of model
 
 Release 0.3.3-1264 (May 24, 2010)
 =================================
